--- a/calculator-app/package.json
+++ b/calculator-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "word-counter-app",
+  "name": "calculator-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,8 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.0.0"
   }
 }
